Added navigation between list and details.

--- a/public/components/order-list.html
+++ b/public/components/order-list.html
@@ -4,6 +4,10 @@
 <polymer-element name="order-list" noscript>
     <template>
         <style>
+            :host {
+                display: block;
+                height: 100%;
+            }
             core-list {
                 height: 100%;
             }
@@ -16,4 +20,3 @@
         </core-list>
     </template>
 </polymer-element>
-
